fixed the overflow

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -117,7 +117,7 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 8px;
-  border: 1px solid var(--f1-light-gray);
+  border: 2px solid var(--f1-light-gray);
 }
 
 /* Specific wrapper for consolidated view */
